<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Accueil -->
    <item
        android:id="@+id/action_accueil"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_accueil"
        android:icon="@drawable/home"/>
    
    <!-- Planning -->
    <item
        android:id="@+id/action_planning"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_planning"
        android:icon="@drawable/planning"/>
    
    <!-- Notifications -->
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_notifications"
        android:icon="@drawable/notifications"/>
    
    <!-- compte -->
    <item
        android:id="@+id/action_compte"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_compte"
        android:icon="@drawable/compte"/>
    
    <!-- credits -->
    <item
        android:id="@+id/action_credits"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_credits"
        android:icon="@drawable/credits"/>

</menu>
