<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Accueil" >

    <ImageView
        android:id="@+id/image_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/profil_cj"
        android:contentDescription="@string/accueil_image"
        android:onClick="compte"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bonjour"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/image_profil"
        android:text="@string/accueil_email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/groupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/email"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/image_profil"
        android:text="@string/accueil_groupe"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_profil"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/image_profil"
        android:layout_marginTop="50dp"
        android:text="@string/accueil_notification" />

    <TextView
        android:id="@+id/bonjour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/image_profil"
        android:layout_marginTop="-5dp"
        android:text="@string/accueil_bonjour"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
</RelativeLayout>